fixing alignment of items usign two panel left component

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -4727,7 +4727,7 @@ button.danger:hover {
 .two-panel-left {
   display: grid;
   grid-template-columns: 260px 1fr;
-  align-items: start;
+  /* align-items: start; */
   gap: 1rem;
   min-height: 0
 }
